glx/testdata/invalid/broken-references/vocabularies/place-types.glx
../../../../../specification/5-standard-vocabularies/place-types.glx